lib/sundials_4.0.2/include/cvode/cvode_ls.h

/*===============================================================
  CVLS user-supplied function prototypes
  ===============================================================*/

/*-----------------------------------------------------------------
  Type: CVLsJacFn
 
  A Jacobian approximation function Jac must be of type CVLsJacFn.
  Its parameters are:
 
  Jac is the SUNMatrix matrix that will be loaded by a CVLsJacFn 
  with an approximation to the Jacobian 
      matrix J = (df_i/dy_j) at the point (t,y). 
 
  t   is the current value of the independent variable.
 
  y   is the current value of the dependent variable vector,
      namely the predicted value of y(t).
 
  fy  is the vector f(t,y).
 
  user_data is a pointer to user data - the same as the user_data
      parameter passed to CVodeSetUserdata.
 
  tmp1, tmp2, and tmp3 are pointers to memory allocated for
  vectors of length N which can be used by a CVLsJacFn
  as temporary storage or work space.
 
  A CVLsJacFn should return 0 if successful, a positive 
  value if a recoverable error occurred, and a negative value if 
  an unrecoverable error occurred.
 
  NOTE: See the relevant SUNMatrix implementation header files and
      documentation for mechanisms to inquire about matrix 
      dimensions, and for efficient ways to set matrix entries.
                                                                 
  NOTE: If the user's Jacobian routine needs other quantities,   
      they are accessible as follows: hcur (the current stepsize)
      and ewt (the error weight vector) are accessible through   
      CVodeGetCurrentStep and CVodeGetErrWeights, respectively 
      (see cvode.h). The unit roundoff is available as 
      UNIT_ROUNDOFF defined in sundials_types.h.
  -----------------------------------------------------------------*/
typedef int (*CVLsJacFn)(realtype t, N_Vector y, N_Vector fy, 
                         SUNMatrix Jac, void *user_data,
                         N_Vector tmp1, N_Vector tmp2, N_Vector tmp3);
/*=================================================================
   CVLS Exported functions
  =================================================================*/

/*-----------------------------------------------------------------
  Required inputs to the CVLS linear solver interface

  CVodeSetLinearSolver specifies the SUNLinearSolver object that 
  CVode should use.  This is required if CVode is solving a problem 
  with a nonlinear solver that requires an inner linear solver 
  (e.g. Newton and not fixed-point).  The 'LS' argument must be 
  non-NULL, but A can be NULL if the solver requires no SUNMatrix 
  object.

  The return value is one of:
     CVLS_SUCCESS   if successful
     CVLS_MEM_NULL  if the CVODE memory was NULL
     CVLS_MEM_FAIL  if a memory allocation request failed
     CVLS_ILL_INPUT if the linear solver memory was NULL
 ---------------------------------------------------------------*/
SUNDIALS_EXPORT int CVodeSetLinearSolver(void *cvode_mem,
                                         SUNLinearSolver LS,
                                         SUNMatrix A);
/*-----------------------------------------------------------------
  Optional inputs to the CVLS linear solver interface
  -----------------------------------------------------------------
  CVodeSetJacFn specifies the Jacobian approximation routine to
    be used when constructing J.  By default, a difference 
    quotient approximation is used for dense/band SUNMatrix 
    objects; for all other matrix types passed to 
    CVodeSetLinearSolver, this routine must be user-supplied).
 
  CVodeSetMaxStepsBetweenJac specifies the maximum number of time
    steps to wait before recomputation of the Jacobian or 
    recommendation to update the preconditioner.  This differs from 
    the CVodeSetMaxStepsBetweenLSet, which merely indicates the 
    frequency with which the linear solver setup routine is called.  
    Default value is 50.

  CVodeSetEpsLin specifies the factor by which the tolerance on
    the nonlinear iteration is multiplied to get a tolerance on 
    the linear iteration.  Default value is 0.05.

  CVodeSetPreconditioner specifies the pset and psolve
    functions for user-supplied preconditioning.  Default is NULL 
    for both arguments (no preconditioning)

  CVodeSetJacTimes specifies the jtsetup and jtimes functions.
    Default is to use an internal finite difference approximation 
    routine with no extra jtsetup.

  The return value of these routines is one of:
     CVLS_SUCCESS   if successful
     CVLS_MEM_NULL  if the cvode memory was NULL
     CVLS_LMEM_NULL if the linear solver memory was NULL
     CVLS_ILL_INPUT if an input has an illegal value
  -----------------------------------------------------------------*/
SUNDIALS_EXPORT int CVodeSetJacFn(void *cvode_mem, CVLsJacFn jac);