lib/sundials_4.0.2/src/cvode/F90/fcvode.f90


     ! -----------------------------------------------------------------
     ! CVodeReInit
     ! -----------------------------------------------------------------

     integer(c_int) function FCVodeReInit(cvode_mem, t0, y0) &
          bind(C,name='CVodeReInit')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr),    value :: cvode_mem
       real(c_double), value :: t0
       type(c_ptr),    value :: y0
     end function FCVodeReInit

     ! -----------------------------------------------------------------
     ! CVodeSStolerances
     ! CVodeSVtolerances
     ! CVodeWFtolerances
     ! -----------------------------------------------------------------

     integer(c_int) function FCVodeSStolerances(cvode_mem, reltol, abstol) &
          bind(C,name='CVodeSStolerances')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr),    value :: cvode_mem
       real(c_double), value :: reltol
       real(c_double), value :: abstol
     end function FCVodeSStolerances

     integer(c_int) function FCVodeSVtolerances(cvode_mem, reltol, abstol) &
          bind(C,name='CVodeSVtolerances')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr),    value :: cvode_mem
       real(c_double), value :: reltol
       type(c_ptr),    value :: abstol
     end function FCVodeSVtolerances

     integer(c_int) function FCVodeWFtolerances(cvode_mem, efun) &
          bind(C,name='CVodeWFtolerances')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr),    value :: cvode_mem
       type(c_funptr), value :: efun
     end function FCVodeWFtolerances

     ! -----------------------------------------------------------------
     ! CVodeRootInit
     ! -----------------------------------------------------------------

     integer(c_int) function FCVodeRootInit(cvode_mem, nrtfn, g) &
          bind(C,name='CVodeRootInit')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr),    value :: cvode_mem
       integer(c_int), value :: nrtfn
       type(c_funptr), value :: g
     end function FCVodeRootInit

     ! -----------------------------------------------------------------
     ! CVode
     ! -----------------------------------------------------------------

     integer(c_int) function FCVode(cvode_mem, tout, yout, tret, itask) &
          bind(C,name='CVode')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr),    value :: cvode_mem
       real(c_double), value :: tout
       type(c_ptr),    value :: yout
       real(c_double)        :: tret
       integer(c_int), value :: itask
     end function FCVode

     ! -----------------------------------------------------------------
     ! CVodeGetDky
     ! -----------------------------------------------------------------

     integer(c_int) function FCVodeGetDky(cvode_mem, t, k, dky) &
          bind(C,name='CVodeGetDky')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr),    value :: cvode_mem
       real(c_double), value :: t
       integer(c_int), value :: k
       type(c_ptr),    value :: dky
     end function FCVodeGetDky

     ! -----------------------------------------------------------------
     ! Integrator optional output extraction functions
     ! -----------------------------------------------------------------

     integer(c_int) function FCVodeGetWorkSpace(cvode_mem, lenrw, leniw) &
          bind(C,name='CVodeGetWorkSpace')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr), value :: cvode_mem
       integer(c_long)    :: lenrw
       integer(c_long)    :: leniw
     end function FCVodeGetWorkSpace

     integer(c_int) function FCVodeGetNumSteps(cvode_mem, nsteps) &
          bind(C,name='CVodeGetNumSteps')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr), value :: cvode_mem
       integer(c_long)    :: nsteps
     end function FCVodeGetNumSteps

     integer(c_int) function FCVodeGetNumRhsEvals(cvode_mem, nfevals) &
          bind(C,name='CVodeGetNumRhsEvals')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr), value :: cvode_mem
       integer(c_long)    :: nfevals
     end function FCVodeGetNumRhsEvals

     integer(c_int) function FCVodeGetNumLinSolvSetups(cvode_mem, nlinsetups) &
          bind(C,name='CVodeGetNumLinSolvSetups')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr), value :: cvode_mem
       integer(c_long)    :: nlinsetups
     end function FCVodeGetNumLinSolvSetups

     integer(c_int) function FCVodeGetNumErrTestFails(cvode_mem, netfails) &
          bind(C,name='CVodeGetNumErrTestFails')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr), value :: cvode_mem
       integer(c_long)    :: netfails
     end function FCVodeGetNumErrTestFails

     integer(c_int) function FCVodeGetLastOrder(cvode_mem, qlast) &
          bind(C,name='CVodeGetLastOrder')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr), value :: cvode_mem
       integer(c_int)    :: qlast
     end function FCVodeGetLastOrder

     integer(c_int) function FCVodeGetCurrentOrder(cvode_mem, qcur) &
          bind(C,name='CVodeGetCurrentOrder')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr), value :: cvode_mem
       integer(c_int)     :: qcur
     end function FCVodeGetCurrentOrder

     integer(c_int) function FCVodeGetNumStabLimOrderReds(cvode_mem, nslred) &
          bind(C,name='CVodeGetNumStabLimOrderReds')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr), value :: cvode_mem
       integer(c_long)    :: nslred
     end function FCVodeGetNumStabLimOrderReds

     integer(c_int) function FCVodeGetActualInitStep(cvode_mem, hinused) &
          bind(C,name='CVodeGetActualInitStep')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr), value :: cvode_mem
       real(c_double)     :: hinused
     end function FCVodeGetActualInitStep

     integer(c_int) function FCVodeGetLastStep(cvode_mem, hlast) &
          bind(C,name='CVodeGetLastStep')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr), value :: cvode_mem
       real(c_double)     :: hlast
     end function FCVodeGetLastStep

     integer(c_int) function FCVodeGetCurrentStep(cvode_mem, hcur) &
         bind(C,name='CVodeGetCurrentStep')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr), value :: cvode_mem
       real(c_double)     :: hcur
     end function FCVodeGetCurrentStep

     integer(c_int) function FCVodeGetCurrentTime(cvode_mem, tcur) &
          bind(C,name='CVodeGetCurrentTime')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr), value :: cvode_mem
       real(c_double)     :: tcur
     end function FCVodeGetCurrentTime

     integer(c_int) function FCVodeGetTolScaleFactor(cvode_mem, tolsfac) &
          bind(C,name='CVodeGetTolScaleFactor')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr), value :: cvode_mem
       real(c_double)     :: tolsfac
     end function FCVodeGetTolScaleFactor

     integer(c_int) function FCVodeGetErrWeights(cvode_mem, eweight) &
          bind(C,name='CVodeGetEffWeights')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr), value :: cvode_mem
       type(c_ptr), value :: eweight
     end function FCVodeGetErrWeights

     integer(c_int) function FCVodeGetEstLocalErrors(cvode_mem, ele) &
          bind(C,name='CVodeGetEstLocalErrors')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr), value :: cvode_mem
       type(c_ptr), value :: ele
     end function FCVodeGetEstLocalErrors

     integer(c_int) function FCVodeGetNumGEvals(cvode_mem, ngevals) &
          bind(C,name='CVodeGetNumGEvals')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr), value :: cvode_mem
       integer(c_long)    :: ngevals
     end function FCVodeGetNumGEvals

     integer(c_int) function FCVodeGetRootInfo(cvode_mem, rootsfound) &
          bind(C,name='CVodeGetRootInfo')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr), value :: cvode_mem
       integer(c_int)     :: rootsfound
     end function FCVodeGetRootInfo

     integer(c_int) function FCVodeGetIntegratorStats(cvode_mem, nsteps, nfevals, &
          nlinsetups, netfails, qlast, qcur, hinused, hlast, hcur, tcur) &
          bind(C,name='CVodeGetIntegratorStats')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr), value :: cvode_mem
       integer(c_long)    :: nsteps
       integer(c_long)    :: nfevals
       integer(c_long)    :: nlinsetups
       integer(c_long)    :: netfails
       integer(c_int)     :: qlast
       integer(c_int)     :: qcur
       real(c_double)     :: hinused
       real(c_double)     :: hlast
       real(c_double)     :: hcur
       real(c_double)     :: tcur
     end function FCVodeGetIntegratorStats

     ! -----------------------------------------------------------------
     ! Nonlinear solver optional output extraction functions
     ! -----------------------------------------------------------------

     integer(c_int) function FCVodeGetNumNonlinSolvIters(cvode_mem, nniters) &
          bind(C,name='CVodeGetNumNonlinSolvIters')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr), value :: cvode_mem
       integer(c_long)    :: nniters
     end function FCVodeGetNumNonlinSolvIters

     integer(c_int) function FCVodeGetNumNonlinSolvConvFails(cvode_mem, nncfails) &
          bind(C,name='CVodeGetNumNonlinSolvConvFails')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr), value :: cvode_mem
       integer(c_long)    :: nncfails
     end function FCVodeGetNumNonlinSolvConvFails

     integer(c_int) function FCVodeGetNonlinSolvStats(cvode_mem, nniters, nncfails) &
          bind(C,name='CVodeGetNonlinSolvStats')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr), value :: cvode_mem
       integer(c_long)    :: nniters
       integer(c_long)    :: nncfails
     end function FCVodeGetNonlinSolvStats

     ! -----------------------------------------------------------------
     ! NOT INTERFACED: CVodeGetReturnFlagName
     ! -----------------------------------------------------------------

     ! -----------------------------------------------------------------
     ! CVodeFree
     ! -----------------------------------------------------------------

     subroutine FCVodeFree(cvode_mem) &
          bind(C,name='CVodeFree')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr) :: cvode_mem ! DO NOT use value attribute input is void**
     end subroutine FCVodeFree

     ! =================================================================
     ! Interfaces from cvode_ls.h
     ! =================================================================

     integer(c_int) function FCVodeSetLinearSolver(cvode_mem, LS, A) &
          bind(C,name='CVodeSetLinearSolver')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr), value :: cvode_mem
       type(c_ptr), value :: LS
       type(c_ptr), value :: A
     end function FCVodeSetLinearSolver

     ! -----------------------------------------------------------------
     ! Optional inputs to the CVLS linear solver
     ! -----------------------------------------------------------------

     integer(c_int) function FCVodeSetJacFn(cvode_mem, jac) &
          bind(C,name='CVodeSetJacFn')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr),    value :: cvode_mem
       type(c_funptr), value :: jac
     end function FCVodeSetJacFn
